objects/ESN_CheckIn__c.object
<CustomObject>
    <fields>
        <fullName>ESN_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESN_Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ESN_LocationMaps__c</fullName>
        <formula>IF(  
    NOT( ISNULL(ESN_Geolocation__c) ) ,  
    IMAGE(
          &quot;http://maps.googleapis.com/maps/api/staticmap?center=&quot; 
             + TEXT(ESN_Geolocation__Latitude__s)
             + &quot;,&quot;
             + TEXT(ESN_Geolocation__Longitude__s)
             + &quot;&amp;zoom=14&amp;size=640x500&amp;sensor=false&amp;visual_refresh=true&amp;scale=1&amp;markers=color:blue|&quot;
             + TEXT(ESN_Geolocation__Latitude__s)
             + &quot;,&quot;
             + TEXT(ESN_Geolocation__Longitude__s), 
          &quot;&quot;
    ), 
    &quot;&quot;
)</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChecksIn</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Check-In</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESN_LocationName__c</columns>
        <columns>ESN_User__c</columns>
        <columns>ESN_Date__c</columns>
        <columns>ESN_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CI-{000000000}</displayFormat>
        <label>Check-In Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checks-In</pluralLabel>
    <recordTypes>
        <fullName>ESN_StandardCheckin</fullName>
        <active>true</active>
        <label>Standard Check-in</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>